--- a/TP2/UI.Desktop/ApplicationForm.resx
+++ b/TP2/UI.Desktop/ApplicationForm.resx
@@ -438,4 +438,10 @@
         6+jp1aM435l955Mo1Iu1mf/Z
 </value>
   </data>
+  <metadata name="tableLayoutPanel1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="menuStripBase.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
